src/styles.scss
//
// Overrides
//

$green: #3A833C;
$primary: #407E8C;
$warning: #B85000;
$info: #2D7AB9;
$success: #3A833C;
$danger: #E8113C;
//bulma grey is #7A7A7A which is slightly too light
$grey: #757575;

// Elevations for Box Shadows
$elevation-1: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14),
  0 2px 1px -1px rgba(0, 0, 0, 0.12);
$elevation-2: 0 1px 5px 0 rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
  0 3px 1px -2px rgba(0, 0, 0, 0.12);
$elevation-3: 0 1px 8px 0 rgba(0, 0, 0, 0.2), 0 3px 4px 0 rgba(0, 0, 0, 0.14),
  0 3px 3px -2px rgba(0, 0, 0, 0.12);

$size-0: 3.25rem;
$size-8: 0.5rem;
$size-9: 0.25rem;
//
// Bulma Variables
//
@import 'bulma/sass/utilities/_all.sass';

//
// Our Variables
//
$mobile: $tablet - 1px;
$secondary: $grey-lighter;
$input-icon-color: $grey;
$input-icon-active-color: $grey-darker;
//
// Bulma Styles
//
@import 'bulma/sass/base/_all.sass';
@import 'bulma/sass/helpers/_all.sass';
@import 'bulma/sass/layout/section.sass';
@import 'bulma/sass/grid/columns.sass';

$label-weight: $weight-light;
$input-shadow: none;
$input-focus-box-shadow-size: none;
$slider-thumb-background: $primary;
$slider-thumb-border: 1px solid $primary;

@import 'bulma/sass/form/_all.sass';
@import 'bulma/sass/elements/container.sass';
@import 'bulma/sass/elements/other.sass';
@import 'bulma/sass/elements/button.sass';

$title-color: $black;
$title-weight: 200;
@import 'bulma/sass/elements/title.sass';
@import 'bulma/sass/elements/notification.sass';
@import 'bulma/sass/elements/content.sass';
@import 'bulma/sass/elements/image.sass';

$modal-card-head-radius: 0;
$modal-card-foot-radius: 0;
$modal-card-head-padding: 20px 20px 0;
$modal-card-head-border-bottom: 0;
$modal-card-head-background-color: $white;
$modal-card-foot-background-color: $white;
$modal-card-foot-border-top: 0;
$modal-background-background-color: $secondary;
@import 'bulma/sass/components/modal.sass';
@import 'bulma/sass/components/card.sass';
@import 'bulma/sass/components/dropdown.sass';

//
// Extension overrides
//
$steps-maker-default-color: $grey;

//
// Extensions Styles
//
@import 'bulma-steps/dist/css/bulma-steps.sass';
@import 'bulma-slider/src/sass/index.sass';

$section-padding-mobile-y: $size-5;
$section-padding-mobile-x: $size-8;
$section-padding-mobile: $section-padding-mobile-y $section-padding-mobile-x;

//
// Our Styles
//
@import './styles/loading.scss';
@import './styles/modal.scss';
@import './styles/toast.scss';
@import './styles/animations.scss';
@import './styles/signature.scss';
@import './styles/checkbox.scss';
@import './styles/camera.scss';
@import './styles/ob-html.scss';
@import './styles/radio.scss';
@import './styles/repeatable-set.scss';
@import './styles/ob-image.scss';
@import './styles/ob-files.scss';
@import './styles/number.scss';
@import './styles/date.scss';
@import './styles/autocomplete.scss';
@import './styles/lookup.scss';
@import './styles/steps.scss';
@import './styles/select.scss';
@import './styles/scrolling-service.scss';
@import './styles/input.scss';
@import './styles/utils.scss';
@import './styles/heading.scss';
@import './styles/icons.scss';
@import './styles/figure.scss';
@import './styles/renderer.scss';
@import './styles/compliance.scss';
@import './styles/section.scss';
@import './styles/bsb.scss';
@import './styles/progress.scss';
@import './styles/list.scss';
@import './styles/receipt.scss';
@import './styles/buttons.scss';
//
// Third Party
//
@import 'flatpickr/dist/flatpickr';

